re PR c++/10199 (method parametrized by template does not work everywhere)

cp:
	PR c++/10199
	* call.c (build_method_call): Deal with LOOKUP_EXPR.
	* semantics.c (finish_object_call_expr): Use build_method_call
	when in a template decl.
testsuite
	PR c++/10199
	* g++.dg/lookup/template1.C: New test.

From-SVN: r64810